# sed-auto-materials

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Include/nuklear/: nuklear_gdi.h
Resources/: version.rc
Sources/01_AutoMaterials/: CMakeLists.txt  Main.cpp
Sources/02_AutoMaterialsGUI/: CMakeLists.txt  Main.cpp
